# 1brc

src/main/rust/: Cargo.toml
src/main/rust/src/: main.rs
