[package]
name = "brc"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"

[dependencies]
hashbrown = { version = "0.16.0", default-features = false, features = [
    "inline-more",
    "rayon",
    "default-hasher",
    "nightly",
] }
rayon = { version = "1.11.0", default-features = false }
foldhash = { version = "0.2.0", default-features = false, features = [
    "std",
    "nightly",
] }
